--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <ul class="lol">
                 <li id="Git"><a href="https://github.com/archaicon">Github</a></li>
                 <li id="Res"><a href="NewResumePdf.pdf">Resume</a></li>
-                <li id="Ema"><a href="mailto:sudhuprabu@gmail.com">Email</a></li>
+                <li id="Ema"><a href="mailto:prabus@uw.edu">Email</a></li>
                 <li id="Link"><a href="https://www.linkedin.com/in/archaicon">Linkedin</a></li>
             </ul>
         </nav>
