--- a/index.html
+++ b/index.html
@@ -10,18 +10,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="assets/css/app.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway:100,400' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Josefin+Slab:400' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="app.js"></script>
-    <script src="rAF.js"></script>
-    <script src="TweenLite.min.js"></script>
-    <script src="EasePack.min.js"></script>
+    <script src="assets/js/app.js"></script>
+    <script src="assets/js/rAF.js"></script>
+    <script src="assets/js/TweenLite.min.js"></script>
+    <script src="assets/js/EasePack.min.js"></script>
 </head>
 <body>
     <header class = "shrinker">
@@ -57,7 +54,7 @@
                     <span>PROJECTS</span>
                     <div id="contain">
                         <div class="imgWrap1">
-                            <img id="firstimg" src="mapify.png">
+                            <img id="firstimg" src="assets/images/mapify.png">
                             <a href="http://www.myklcow.co/myklcow/mapify/index.html"><p class="mapdes"><b>Mapify</b>
                                 <br>
                             ..................................................................................
@@ -66,7 +63,7 @@
                             </br>
                         </div>
                         <div class="imgWrap2">
-                            <img id="secondimg" src="rssreal.png">
+                            <img id="secondimg" src="assets/images/rssreal.png">
                             <p class="rssdes"><b>RichSynd</b>
                                 <br>
                                 ..................................................................................
@@ -74,7 +71,7 @@
                                 &nbsp &nbsp &nbsp An Android Rss Aggregator using SQLite <br> &nbsp &nbsp &nbsp database. Emphasizes simple UI and most <br> &nbsp &nbsp &nbsp recently used cache.</p>
                         </div>
                         <div class="imgWrap3">
-                            <img id="thirdimg" src="Robot%20eyes.png">
+                            <img id="thirdimg" src="assets/images/Robot%20eyes.png">
                             <a href="https://github.com/SkylineSpartabots/FRC-2015"><p class="robdes"><b>Autonomous Controls</b>
                                 <br>
                                 ..................................................................................
