--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="navit" id="navig">
             <ul class="lol">
                 <li id="Git"><a href="https://github.com/archaicon">Github</a></li>
-                <li id="Res"><a href="NewResumePdf.pdf">Resume</a></li>
+                <li id="Res"><a href="assets/files/Resume-Prabu.pdf">Resume</a></li>
                 <li id="Ema"><a href="mailto:prabus@uw.edu">Email</a></li>
                 <li id="Link"><a href="https://www.linkedin.com/in/archaicon">Linkedin</a></li>
             </ul>
